--- a/resources/language/en_US.json
+++ b/resources/language/en_US.json
@@ -129,6 +129,18 @@
     "PH_ChooseDescription": "Add Description",
     "PH_SystemPrompt": "Enter your prefered system prompt",
     "PH_SearchBar": "Enter Name, Username oder E-Mail Address" ,
-    "Api_Warning": "To be able to use the HAWKI language models in other applications, you can generate your own API key. To do this, send an email to your IT department, who will generate the API key for you and send it to you."
+    "Api_Warning": "To be able to use the HAWKI language models in other applications, you can generate your own API key. To do this, send an email to your IT department, who will generate the API key for you and send it to you.",
+
+    "Opportunities": "✨ Opportunities",
+    "OpportunityText1": "Get instant answers to your questions",
+    "OpportunityText2": "Creative writing and brainstorming assistance",
+    "OpportunityText3": "Code generation and debugging help",
+    "OpportunityText4": "Analysis and research support",
+    
+    "Limitations": "⚠️ Limitations",
+    "LimitationText1": "May occasionally generate incorrect information",
+    "LimitationText2": "Limited knowledge of events after training cutoff",
+    "LimitationText3": "Cannot browse the internet or access real-time data",
+    "LimitationText4": "May struggle with very specialized or niche topics"
 
 }
