--- a/resources/language/de_DE.json
+++ b/resources/language/de_DE.json
@@ -87,7 +87,7 @@
     "MemberInvite": "Mitglieder einladen",
     "MemberRemove": "Mitglied entfernen",
     "Members": "Mitglieder",
-    "MistakeWarning": "HAWKI kann Fehler machen. Überprüfe wichtige Informationen.",
+    "MistakeWarning": "CHAT LLM kann Fehler machen. Überprüfe wichtige Informationen.",
     "Models": "Modelle",
     "password": "Kennwort",
     "PersonalData": "Persönliche Daten",
