--- a/resources/language/en_US.json
+++ b/resources/language/en_US.json
@@ -86,7 +86,7 @@
     "MemberInvite": "Invite Members",
     "MemberRemove": "Remove Member",
     "Members": "Members",
-    "MistakeWarning": "HAWKI may make mistakes. Check important information.",
+    "MistakeWarning": "CHAT LLM may make mistakes. Check important information.",
     "Models": "Models",
     "password": "Password",
     "PersonalData": "Personal Data",
