--- a/resources/language/de_DE.json
+++ b/resources/language/de_DE.json
@@ -120,6 +120,8 @@
     "StartBanner": "Womit starten wir heute? 👏",
     "StartNewChat": "Neuen Chat starten",
     "SystemPrompt": "Systemprompt",
+    "PromptLibrary": "Prompt-Bibliothek",
+    "PromptLibrary_Desc": "Es soll den Menschen helfen, die verschiedenen Unterstützungsmöglichkeiten zu verstehen und zu lernen, was einen effektiven Prompt ausmacht.",
     "theme": "Theme",
     "Think": "Denken",
     "username": "Benutzername",
